--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-	width: 1000px;
+	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -40,6 +40,12 @@ footer {
 
 }
 
+form > input {
+	padding-top: 3px;
+	padding-bottom: 3px;
+	margin: 2px;
+}
+
 .button {
     background-color: #00FFFF;
     border: none;
@@ -57,6 +63,24 @@ footer {
     float: left;
     top: 30px;
 }
+
+.submit {
+	background-color: #00FFFF;
+	border: none;
+    color: #877D7D;
+    font-weight: bold;
+    padding: 4px 5px;
+    text-align: center;
+    display: inline-block;
+    font-family: arial;
+    font-size: 14px;
+    margin: 6px 4px;
+    cursor: pointer;
+    border-radius: 5px;
+    float: left;
+
+}
+
 
 .onelayer {
 	clear: both;
